[package]
name = "helius-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
futures = "0.3.30"
glob = "0.3.1"
reqwest = { version = "0.12.4", features = ["json"] }
retry = "2.0.0"
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"
tokio = { version = "1.38.0", features = ["full"] }
vybe-api = { version = "0.1", path = "../vybe-api" }
vybe-api-types = { version = "0.1", path = "../vybe-api/types" }
