[package]
name = "pump-fun-api"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.83"
reqwest = { version = "0.12.4", features = ["json"] }
serde = { version = "1.0.202", features = ["derive"] }
serde_json = "1.0.117"


[dev-dependencies]
tokio = { version = "1.37.0", features = ["full"] }
